# gdm-settings

./: .gitignore  NEWS  README.md  build_and_run.sh  colors.sh  enter_temp_install.sh  filemaps  gdm-settings  gdm-settings-cli  gdm-settings.desktop  gdm-settings.py.in  gdm-theme  install.sh  io.github.realmazharhussain.GdmSettings.yaml  load_info.py  load_info.sh  make_appimage.sh  meson.build  uninstall.sh
appimage/: README.md  build.sh  default_vars  utils.sh
build-aux/: meson.build  postinstall.py
data/: application_id.appdata.xml.in  application_id.desktop.in  application_id.gschema.xml.in  gdm-settings.metainfo.xml  io.github.realmazharhussain.GdmSettings.appdata.xml.in  io.github.realmazharhussain.GdmSettings.desktop.in  io.github.realmazharhussain.GdmSettings.metainfo.xml.in  io.github.realmazharhussain.GdmSettings.service.in  meson.build
data/gschemas/: application_id.appearance.gschema.xml.in  application_id.fonts.gschema.xml.in  application_id.gschema.xml.in  application_id.misc.gschema.xml.in  application_id.night-light.gschema.xml.in  application_id.sound.gschema.xml.in  application_id.tools.gschema.xml.in  application_id.touchpad.gschema.xml.in  application_id.window-state.gschema.xml.in  io.github.realmazharhussain.GdmSettings.accessibility.gschema.xml  io.github.realmazharhussain.GdmSettings.appearance.gschema.xml  io.github.realmazharhussain.GdmSettings.appearance.gschema.xml.in  io.github.realmazharhussain.GdmSettings.fonts.gschema.xml  io.github.realmazharhussain.GdmSettings.gschema.xml  io.github.realmazharhussain.GdmSettings.gschema.xml.in  io.github.realmazharhussain.GdmSettings.misc.gschema.xml  io.github.realmazharhussain.GdmSettings.misc.gschema.xml.in  io.github.realmazharhussain.GdmSettings.mouse.gschema.xml  io.github.realmazharhussain.GdmSettings.night-light.gschema.xml  io.github.realmazharhussain.GdmSettings.night-light.gschema.xml.in  io.github.realmazharhussain.GdmSettings.pointing.gschema.xml  io.github.realmazharhussain.GdmSettings.pointing.gschema.xml.in  io.github.realmazharhussain.GdmSettings.pointing.mouse.gschema.xml  io.github.realmazharhussain.GdmSettings.pointing.mouse.gschema.xml.in  io.github.realmazharhussain.GdmSettings.pointing.touchpad.gschema.xml  io.github.realmazharhussain.GdmSettings.pointing.touchpad.gschema.xml.in  io.github.realmazharhussain.GdmSettings.power.gschema.xml  io.github.realmazharhussain.GdmSettings.sound.gschema.xml  io.github.realmazharhussain.GdmSettings.tools.gschema.xml  io.github.realmazharhussain.GdmSettings.tools.gschema.xml.in  io.github.realmazharhussain.GdmSettings.top-bar.gschema.xml  io.github.realmazharhussain.GdmSettings.top-bar.gschema.xml.in  io.github.realmazharhussain.GdmSettings.touchpad.gschema.xml  io.github.realmazharhussain.GdmSettings.window-state.gschema.xml  io.github.realmazharhussain.GdmSettings.window-state.gschema.xml.in  meson.build
data/icons/: meson.build
docs/: features-for-future.md  features.md  translate.md
gdm_settings/: __init__.py  config.py  config.py.in  env.py  gdm-settings.py.in  meson.build  settings.py  themes.py  utils.py  widgets.py
gdm_settings/app/: __init__.py  about.py  app.py  cmd.py  env.py  gr_utils.py  meson.build  privilege_escalation.py  settings.py  theme_lists.py  utils.py  window.py
gdm_settings/app/pages/: appearance.py  display.py  fonts.py  login_screen.py  pointing.py  power.py  sound.py  tools.py  top_bar.py
gdm_settings/app/pages/pointing_utils/: cursor.py
gdm_settings/lib/: __init__.py  background_task.py  file_choosers.py  misc.py  preferences_rows.py  settings.py
gdms/: __init__.py  __main__.py  cmd.py  config.py.in  debug_info.py  enums.py  env.py  gr_utils.py  gresource.py  meson.build  settings.py  themes.py  utils.py  widgets.py
gdms/app/pages/: appearance.py  display.py  fonts.py  tools.py
gdms/gui/: __init__.py  about.py  sidebar.py  widgets.py  window.py
gdms/gui/pages/: appearance.py  common.py  display.py  fonts.py  login_screen.py  pointing.py  power.py  sound.py  tools.py  top_bar.py
gdms/gui/pages/pointing_utils/: cursor.py
src/: about-dialog.ui  about-dialog.ui.in  about.py  app-menu.ui  app.py  bind_utils.py  colors.py  command_elevation.py  common_widgets.py  dialogs.py  enums.py  env.py  error-dialog.ui  functions.py  gdm-settings-adw.py  gdm-settings-cli.py  gdm-settings-noadw.py  gdm-settings.in  gdm-settings.py  gdm-settings.py.in  gdm-theme  gdm-theme.py  gdm_settings_gui.py  get_env.py  get_theme_list.py  gr_utils.py  gui.py  info.py  info.py.in  log.py  main-window-adw.ui  main-window-noadw.ui  main-window.ui  meson.build  parse_args.py  pkg_detect.py  pkg_setup.py  prefs.py  privilege_escalation.py  settings.py  (+8 more)
src/app/: __init__.py  enums.py  env.py  gr_utils.py  info.py.in  meson.build  settings.py
src/app/pages/: display.py  power.py  sound.py  top_bar.py
src/blueprints/: app-preferences.blp  appearance-page.blp  display-page.blp  fonts-page.blp  image-chooser.ui  login-screen-page.blp  main-window.blp  main-window.blp.in  meson.build  misc-page.blp  night-light-page.blp  pointing-page.blp  power-page.blp  prefs.blp  sound-page.blp  tools-page.blp  top-bar-page.blp  touchpad-page.blp
src/lib/: __init__.py  background_task.py  file_choosers.py  misc.py  preferences_rows.py  privilege_escalation.py  settings.py
src/pages/: __init__.py  appearance.py  common.py  display.py  fonts.py  login_screen.py  misc.py  pointing.py  power.py  sound.py  tools.py  top_bar.py
src/pages/pointing_utils/: cursor.py
src/resources/: gdm-settings.gresource.xml  meson.build
src/resources/ui/: appearance-page.blp  display-page.blp  fonts-page.blp  login-screen-page.blp  main-window.blp  pointing-page.blp  power-page.blp  sound-page.blp  tools-page.blp  top-bar-page.blp
src/resources/ui/pointing-page/: cursor-image.blp  cursor-size-button.blp  cursor-size-selector.blp
src/ui/: about-dialog.ui.in  app-menu.ui  appearance-page.ui  fonts-page.ui  image-chooser.ui  main-window.ui  meson.build  misc-page.ui  night-light-page.ui  responses.ui  sound-page.ui  theme.ui  top-bar-page.ui  touchpad-page.ui
(+92 files in other folders)
